--- a/index.css
+++ b/index.css
@@ -215,3 +215,13 @@ body {
 .quotes-warper {
 	margin: 45px 100px;
 }
+.copy-right {
+	font-family: "Roboto", sans-serif;
+
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	/* width: 800px; */
+	font-size: 10px;
+	padding-left: 75px;
+}
