--- a/index.css
+++ b/index.css
@@ -72,7 +72,7 @@ body,
 	position: relative;
 	cursor: pointer;
 	flex-direction: column;
-	min-height: 300px;
+	/* min-height: 300px; */
 
 	border-radius: 20px;
 	object-fit: cover;
@@ -98,11 +98,19 @@ body,
 }
 .text p {
 	font-weight: bold;
-	font-size: 26px;
-	line-height: 1.45em;
+	font-size: 16px;
+	line-height: 1.2em;
 	text-align: center;
 	user-select: none;
 }
+
+@media (min-width: 1080px) {
+	.text p {
+		font-size: 26px;
+		line-height: 1.45em;
+	}
+}
+
 @keyframes animate {
 	0% {
 		box-shadow: 7px 7px 15px rgba(55, 84, 170, 0.15),
@@ -131,7 +139,7 @@ body,
 	z-index: 1;
 }
 .img {
-	width: 250px;
+	width: 175px;
 	aspect-ratio: 1/1;
 	background-size: cover;
 }
@@ -224,6 +232,7 @@ body,
 }
 .quotes-warper {
 	margin: 45px 10px;
+	text-align: center;
 }
 @media (min-width: 768px) {
 	.quotes-warper {
