--- a/index.css
+++ b/index.css
@@ -411,3 +411,8 @@ body,
 		font-size: 24px;
 	}
 }
+@media (min-width: 1560px) {
+	.end-content {
+		transform: translate(-50%, -20%) rotate(-2deg);
+	}
+}
